; ModuleID = '/home/carl/AnghaBench/linux/kernel/bpf/extr_verifier.c___reg_bound_offset.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/bpf/extr_verifier.c___reg_bound_offset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bpf_reg_state = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bpf_reg_state*)* @__reg_bound_offset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__reg_bound_offset(%struct.bpf_reg_state* %0) #0 {
  %2 = alloca %struct.bpf_reg_state*, align 8
  store %struct.bpf_reg_state* %0, %struct.bpf_reg_state** %2, align 8
  %3 = load %struct.bpf_reg_state*, %struct.bpf_reg_state** %2, align 8
  %4 = getelementptr inbounds %struct.bpf_reg_state, %struct.bpf_reg_state* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.bpf_reg_state*, %struct.bpf_reg_state** %2, align 8
  %7 = getelementptr inbounds %struct.bpf_reg_state, %struct.bpf_reg_state* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.bpf_reg_state*, %struct.bpf_reg_state** %2, align 8
  %10 = getelementptr inbounds %struct.bpf_reg_state, %struct.bpf_reg_state* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @tnum_range(i32 %8, i32 %11)
  %13 = call i32 @tnum_intersect(i32 %5, i32 %12)
  %14 = load %struct.bpf_reg_state*, %struct.bpf_reg_state** %2, align 8
  %15 = getelementptr inbounds %struct.bpf_reg_state, %struct.bpf_reg_state* %14, i32 0, i32 2
  store i32 %13, i32* %15, align 4
  ret void
}

declare dso_local i32 @tnum_intersect(i32, i32) #1

declare dso_local i32 @tnum_range(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
